Bug fix to resizing of details pane on safari
Position: absolute broken by floated right column parent previously in
Safari.

--- a/prebuilt_forms/css/sass/verification_5.scss
+++ b/prebuilt_forms/css/sass/verification_5.scss
@@ -127,6 +127,7 @@ ul.gallery li {
 #comment-text, #query-comment-text {
   display: block;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .popup-form {
@@ -268,8 +269,9 @@ ul.gallery li {
     position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
+    bottom: 0px;
+    right: 0px;
+    display: inline-block;
     #record-details-tabs {
       font-size: 100%;
       #details-zoom {
